--- a/src/style.css
+++ b/src/style.css
@@ -37,9 +37,12 @@ h1 {
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0 auto;;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem;
+  height: 100vh;
 }
 
 .logo {
